--- a/src/components/Transactions.css
+++ b/src/components/Transactions.css
@@ -4,3 +4,9 @@
     margin-top:10%;
     background-color: cadetblue;
 }
+.table td{
+    border: 3px solid orange;
+}
+.table th{
+    border: 3px solid orange;
+}
